# rust_realtime_auction

./: .gitignore  Cargo.toml
crates/auction_core/: Cargo.toml
crates/auction_core/src/: errors.rs  lib.rs  models.rs  services.rs
crates/auction_persistance/: Cargo.toml
crates/auction_persistance/src/: db_connection.rs  lib.rs  postgres_auction_service.rs
crates/auction_websockets/: Cargo.toml
crates/http_api/: Cargo.toml
crates/http_api/src/: app_state.rs  lib.rs  routes.rs
src/: main.rs
