[package]
name = "auction_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = {version = "1", features = ["serde","v4"]}
sqlx = "0.8.6"
