[package]
name = "auction_persistance"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
auction_core = {path = "../auction_core"}
chrono = "0.4.41"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
